<resources>
	<string name="app_name">signIn</string>
	<string name="welcome">Добро пожаловать</string>
	<string name="hint_email">Email</string>
	<string name="hint_password">Пароль</string>
	<string name="error_empty_email">Введите email</string>
	<string name="error_empty_password">Введите пароль</string>
	<string name="sign_in">Войти</string>
	<string name="remember_me">Запомнить меня</string>
	<string name="dialog_question">Чьё расписание вы хотите посмотреть?</string>
	<string name="dialog_title">Выберите тип расписания</string>
	<string name="dialog_student">Студента</string>
	<string name="dialog_teacher">Преподавателя</string>
</resources>