<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="16dp">

	<TextView
		android:id="@+id/dialogQuestion"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/dialog_question"
		android:textAlignment="center"
		android:textSize="20sp"
		android:textStyle="bold" />

	<Button
		android:id="@+id/dialogStudentButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:backgroundTint="@color/green_primary"
		android:text="@string/dialog_student"
		android:textColor="@color/white" />

	<Button
		android:id="@+id/dialogTeacherButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:backgroundTint="@color/green_secondary"
		android:text="@string/dialog_teacher" />

</LinearLayout>