<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.SignInFragment">

	<EditText
		android:id="@+id/editTextEmail"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/hint_email"
		android:inputType="textEmailAddress"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/guideline" />

	<EditText
		android:id="@+id/editTextTextPassword"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:ems="10"
		android:hint="@string/hint_password"
		android:inputType="textPassword"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.502"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textViewEmailError" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.35" />

	<TextView
		android:id="@+id/textViewEmailError"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="2dp"
		android:gravity="start"
		android:text="@string/error_empty_email"
		android:textAppearance="@style/ErrorTextView"
		android:visibility="gone"
		app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
		app:layout_constraintStart_toStartOf="@+id/editTextEmail"
		app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

	<TextView
		android:id="@+id/textViewPasswordError"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:gravity="start"
		android:text="@string/error_empty_password"
		android:textAppearance="@style/ErrorTextView"
		android:visibility="gone"
		app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
		app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

	<Button
		android:id="@+id/buttonSignIn"
		style="@style/ButtonPrimary1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="50dp"
		android:text="@string/sign_in"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textViewPasswordError" />

	<TextView
		android:id="@+id/textViewWelcome"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/welcome"
		android:textSize="20sp"
		app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>